--- a/index.html
+++ b/index.html
@@ -5,3 +5,8 @@ Hello there, awesome person!
         Hi!
     </body>
 </html>
+<html>
+    <head>
+        <title>I am a Beast!</title>
+    </head>
+    
